--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,7 +34,8 @@ body {
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 1730px;
+    max-width: 99%;
   }
 }
 .container-narrow > hr {
